--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,9 +15,16 @@
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "@nestjs/common": "^11.1.7",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.7",
     "@nestjs/platform-express": "^11.1.7",
-    "reflect-metadata": "~0.2.2"
+    "@nestjs/swagger": "^11.2.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "pg": "^8.16.3",
+    "reflect-metadata": "~0.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
