--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -13,7 +13,12 @@
     "outDir": "./dist",
     "rootDir": "./",
     "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/*"]
+    },
     "skipLibCheck": true,
     "incremental": true
-  }
+  },
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules"]
 }
